# cmp9134-2526

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml
app/: main.py
app/admin/: router.py  service.py
app/admin/schemas/: update_user_role_schema.py
app/audit_log/: models.py  router.py  service.py
app/audit_log/schemas/: create_audit_log_schema.py
app/auth/: router.py  service.py  state.py
app/auth/schemas/: login_response_data_schema.py  login_schema.py  refresh_token_response_data_schema.py  register_response_data_schema.py  register_schema.py  request_password_reset_schema.py  reset_password_schema.py  (+3 more)
app/cache/: service.py
app/common/: exceptions.py  handlers.py  paginator.py  types.py
app/database/: config.py  models.py  registry.py
app/map/: router.py  service.py
app/robot/: gateway.py  router.py  service.py
app/socket/: manager.py  ws_message.py
app/token/: backends.py  dependency.py  exception.py  models.py  scheme.py  service.py  tokens.py  utils.py
app/user/: models.py  router.py  service.py
frontend/: Dockerfile  default.conf.template  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: map.ts  (+2 more)
migrations/: env.py  script.py.mako
migrations/versions/: 2026_03_05_1303-dfb3ab55b44c_initial_migraions.py  2026_03_05_1354-1d753a55392d_added_password.py  2026_03_05_1432-f5143e2e46ee_last_login_time_aware.py  2026_03_15_1750-73c16ed0d331_addded_audit_log_model.py
settings/: config.py
(+22 files in other folders)
