[tool.poetry]
name = "cmp9134-2526-backend"
version = "0.1.0"
description = ""
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.133.0"
sqlalchemy = "2.0.23"
sqlmodel = "^0.0.24"
uvicorn = "^0.41.0"
pydantic-settings = "^2.13.1"
httpx = "^0.28.1"
pyjwt = "^2.11.0"
psycopg2 = "^2.9.11"
pydantic = "^2.12.5"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
slowapi = "^0.1.9"
email-validator = "^2.3.0"
bcrypt = "^5.0.0"
websockets = "^16.0"
redis = "^7.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12.5"
ignore_missing_imports = true
strict = true
